istio/payment-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-fix
  labels:
    app: payment
    service: payment
    stage: test
    version: v1.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
      service: payment
      stage: test
      version: v1.1
  template:
    metadata:
      labels:
        app: payment
        service: payment
        stage: test
        version: v1.1
    spec:
      containers:
      - name: payment-fix
        image: robotshop/rs-payment-fix:latest
        # agent networking access
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
